--- a/src/index.css
+++ b/src/index.css
@@ -23,8 +23,29 @@ body{
 h2{
     font-size:29px;
 }
+.btn{
+    background-color: #25d15e54;
+    color:#000;
+    padding:5px;
+    margin: 5px;
+    border-radius: 15px;
+    transition: 0.4s;
+    border: 2px solid #4CAF50;
+}
+.light{
+    background-color: #fff;
+    color:#333;
+}
+.dark{
+    background-color: #333;
+    color:#fff;
+
+}
+
+
 .cardItems{
     background-color: #fff;
+    color:#000;
     width:568px;
     height: 100%;
     border-radius: 15px;
@@ -32,6 +53,10 @@ h2{
     margin:15px 0;
     align-items: center;
     justify-content: center;
+}
+.cardItems.reverse{
+    background-color: rgba(0,0,0,0.4);
+    color:white;
 }
 .ratings{
     background-color:rgba(19, 214, 52, 0.333);
